--- a/src/html/about.html
+++ b/src/html/about.html
@@ -5,7 +5,7 @@
             <p class="section-text about__text">Здесь мы расскажем несколько фактов и историю нашей студии.</p>    
         </div>
         <div class="about__cards">
-            <div class="about__card about-card about-card_with-image" style="background: url('../images/about1.png');">
+            <div class="about__card about-card about-card_with-image" style="background: url('images/about1.png');">
                 <h3 class="about-card__title">11 лет</h3>
                 <span class="about-card__text">практический опыт в вебкам индустрии</span>
             </div>
@@ -13,7 +13,7 @@
                 <h3 class="about-card__title">ТОП студия</h3>
                 <span class="about-card__text">в 2018-2020 годах мы вошли в ТОП-5 студий России и Украины.</span>
             </div>
-            <div class="about__card about-card about-card_with-image" style="background: url('../images/about2.png');">
+            <div class="about__card about-card about-card_with-image" style="background: url('images/about2.png');">
                 <h3 class="about-card__title">более 200 моделей</h3>
                 <span class="about-card__text">доверяют нам</span>
             </div>
