--- a/src/html/article.html
+++ b/src/html/article.html
@@ -34,8 +34,8 @@
             <h2>Какая внешность нужна для работы в Webcam?</h2>
             <p>Нет никакой разницы как выглядит модель. Разумеется, это касается только изначальных внешних данных. А вот правильный подбор образа – это очень важно. Зрителю гораздо важнее харизма модели, то как она ведет себя в чате, какой костюм она подобрала, как общается и так далее. 
                 Если девушка подберет правильный образ и уникальный стиль, то сможет стать популярнее других и заработать внушительную сумму.</p>
-            <img src="../images/article1.png" class="article-image">
-            <img src="../images/article2.png" class="article-image">
+            <img src="images/article1.png" class="article-image">
+            <img src="images/article2.png" class="article-image">
             <h2>Какие категории существуют в вебкаме?</h2>
             <p>Стать вебкам моделью можно в нескольких категориях. Подойти к их выбору нужно аккуратно, потому что переход из одной в другую может стоить модели постоянных зрителей и, как следствие, дохода. Самые популярные категории на сегодня – флирт и эротика.</p>
             <p><b>Категория «Флирт»</b> подойдет для моделей, которые хотят только общения 
@@ -66,6 +66,5 @@
                 и профессиональные амбиции, показать миру свою уникальность 
                 и быть красивой и успешной в любом возрасте"</blockquote>
         </div>
-        
     </div>
 </section>
