--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -7,76 +7,62 @@
         <div class="faq__accordeon accordion">
             <div class="accordion__elem">
                 <div class="accordion__header">
-                    <h2 class="accordion__title">Надо знать английский?</h2>
+                    <h2 class="accordion__title">Если я не знаю английский язык?</h2>
                     <div class="accordion-button accordion-button_gradient"></div>
                 </div>
                 <div class="accordion__content">
                     <p class="accordion__text">
-                        Знание языков приветствуется, но не обязательно. В нашей студии с Вами будет работать квалифицированный оператор-переводчик. Она не только будет переводить для Вас тексты но и обучит всем тонкостями хитростям работы.
+                        В нашей студии есть возможность посещения курсов английского языка. Мы адаптируем каждый курс под ваш уровень.
                         <br><br>
-                        Если вы уже знаете английский язык, то эта работа будет очень хорошим способомусовершенствовать знания и попрактиковаться с реальными носителями языка.
-                        <br><br>
-                        Кроме того, вы можете практиковать как устную, так и письменную речь.
+                        Вы также можете использовать онлайн-переводчик, который позволит быстро перевести текст и даже голосовое сообщение.
                     </p>
                 </div>
             </div>
             <div class="accordion__elem">
                 <div class="accordion__header">
-                    <h2 class="accordion__title">Надо знать английский?</h2>
+                    <h2 class="accordion__title">У меня нет опыта. Я не знаю, что мне нужно делать. </h2>
                     <div class="accordion-button accordion-button_gradient"></div>
                 </div>
                 <div class="accordion__content">
                     <p class="accordion__text">
-                        Знание языков приветствуется, но не обязательно. В нашей студии с Вами будет работать квалифицированный оператор-переводчик. Она не только будет переводить для Вас тексты но и обучит всем тонкостями хитростям работы.
-                        <br><br>
-                        Если вы уже знаете английский язык, то эта работа будет очень хорошим способомусовершенствовать знания и попрактиковаться с реальными носителями языка.
-                        <br><br>
-                        Кроме того, вы можете практиковать как устную, так и письменную речь.
+                        Вам будут показывать и рассказывать, как лучше показать себя перед камерой, а также на каждом этапе работы куратор будет помогать тебе, рекомендуя, что и как следует делать лучше.
                     </p>
                 </div>
             </div>
             <div class="accordion__elem">
                 <div class="accordion__header">
-                    <h2 class="accordion__title">Надо знать английский?</h2>
+                    <h2 class="accordion__title">А нужно ли раздеваться?</h2>
                     <div class="accordion-button accordion-button_gradient"></div>
                 </div>
                 <div class="accordion__content">
                     <p class="accordion__text">
-                        Знание языков приветствуется, но не обязательно. В нашей студии с Вами будет работать квалифицированный оператор-переводчик. Она не только будет переводить для Вас тексты но и обучит всем тонкостями хитростям работы.
+                        Нет, это не обязательно, и вы можете принять решение самостоятельно. 
                         <br><br>
-                        Если вы уже знаете английский язык, то эта работа будет очень хорошим способомусовершенствовать знания и попрактиковаться с реальными носителями языка.
-                        <br><br>
-                        Кроме того, вы можете практиковать как устную, так и письменную речь.
+                        Учитывайте, что самые продолжительные и высокооплачиваемые сессии - это разговорные, поэтому полезнее будут хорошее знание английского языка и умение вести интересный диалог.
                     </p>
                 </div>
             </div>
             <div class="accordion__elem">
                 <div class="accordion__header">
-                    <h2 class="accordion__title">Надо знать английский?</h2>
+                    <h2 class="accordion__title">Нужна ли модельная внешность?</h2>
                     <div class="accordion-button accordion-button_gradient"></div>
                 </div>
                 <div class="accordion__content">
                     <p class="accordion__text">
-                        Знание языков приветствуется, но не обязательно. В нашей студии с Вами будет работать квалифицированный оператор-переводчик. Она не только будет переводить для Вас тексты но и обучит всем тонкостями хитростям работы.
+                        Каждая девушка имеет возможность зарабатывать в этой сфере, и не обязательно соответствовать стандартным параметрам красоты 90-60-90 или иметь идеальную внешность. 
                         <br><br>
-                        Если вы уже знаете английский язык, то эта работа будет очень хорошим способомусовершенствовать знания и попрактиковаться с реальными носителями языка.
-                        <br><br>
-                        Кроме того, вы можете практиковать как устную, так и письменную речь.
+                        В первую очередь важно уметь поддерживать диалог, быть позитивной, харизматичной и доброжелательной.
                     </p>
                 </div>
             </div>
             <div class="accordion__elem">
                 <div class="accordion__header">
-                    <h2 class="accordion__title">Надо знать английский?</h2>
+                    <h2 class="accordion__title">Какие преимущества работы веб-моделью?</h2>
                     <div class="accordion-button accordion-button_gradient"></div>
                 </div>
                 <div class="accordion__content">
                     <p class="accordion__text">
-                        Знание языков приветствуется, но не обязательно. В нашей студии с Вами будет работать квалифицированный оператор-переводчик. Она не только будет переводить для Вас тексты но и обучит всем тонкостями хитростям работы.
-                        <br><br>
-                        Если вы уже знаете английский язык, то эта работа будет очень хорошим способомусовершенствовать знания и попрактиковаться с реальными носителями языка.
-                        <br><br>
-                        Кроме того, вы можете практиковать как устную, так и письменную речь.
+                        Гибкий график, возможность влиять на заработную плату количеством проведенных трансляций, новые и интересные знакомства, улучшение коммуникативных навыков, в том числе общением с англоговорящими. 
                     </p>
                 </div>
             </div>
