--- a/src/html/franchisees.html
+++ b/src/html/franchisees.html
@@ -1,6 +1,32 @@
-<main class="main">
-    <div class="faq__info section__info container">
-      <h1 class="section-title">Для франчайзи</h1>
-      <p class="section-text">На данный момент страница в разработке</p>
+<div class="franchisees">
+    <div class="container">
+        <div class="franchisees__info section__info">
+            <h1 class="section-title">Для франчайзи</h1>
+        </div>
+        <div class="article__content franchisees__content">
+            <ol>
+                <li><p>Подключение к готовой системе привлечение моделей.</p></li>
+                <li><p>Гарантия эксклюзивного права Франчайзи в зоне его ответственности по договору Франчайзинга.</p></li>
+                <li>
+                    <p>Помощь в открытие и запуске студии:</p>
+                    <ul>
+                        <li><p>Помощь в выборе помещения</p></li>
+                        <li><p>Партнерские скидки на оборудование</p></li>
+                        <li><p>Настройка рабочих мест нашим системным администратором</p></li>
+                        <li><p>Советы по ремонту помещения, Партнерские скидки на мебел.</p></li>
+                        <li><p>Стажировка сотрудников, на нашей студии в реальных условиях</p></li>
+                        <li><p>Выезд руководителей обучение вашего управляющего состава</p></li>
+                        <li><p>Регистрация студийных аккаунтов</p></li>
+                        <li><p>Обучение работе на вебкам платформах</p></li>
+                        <li><p>Анонимный вывод средств через Криптовалюты</p></li>
+                    </ul>
+                </li>
+                <li><p>Права на использование логотипа и фирменного стиля.</p></li>
+                <li><p>Подключение к программным продуктам для управления бизнесом и консультации по их настройкам.</p></li>
+                <li><p>Образцы документов, юридические аспекты бизнеса.</p></li>
+                <li><p>Помощь франчайзи до запуска проекта. Сопровождения до первого рабочего дня.</p></li>
+                <li><p>Присоединенность к самой большой сети студий в РФ. 6 городов присутствия: Санкт-Петербург, Красноярск, Новосибирск, Томск, Тюмень, Екатеринбург.</p></li>
+            </ol>
+        </div>
     </div>
-  </main>
+</div>
