--- a/src/franchisees.html
+++ b/src/franchisees.html
@@ -7,6 +7,8 @@
     @@include('html/header.html', {})
     <main class="main">
         @@include('html/franchisees.html', {})
+        @@include('html/franchisees-advantages.html', {})
+        @@include('html/franchisees-cityes.html', {})
     </main>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
