--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer_container container">
         <div class="footer__logo logo">
-            @@include('../images/vector/logo.svg')
+            <img src="images/logo.png" alt="">
         </div>
         <nav class="footer__menu menu">
             <ul class="menu__list">
