--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,7 +2,7 @@
     <div class="header__wrapper">
         <div class="header__container container">
             <a href="/" class="header__logo logo">
-                @@include('../images/vector/logo.svg')
+                <img src="images/logo.png" alt="">
             </a>
             <nav class="header__menu menu">
                 <ul class="menu__list">
