Smart studio swiper

--- a/src/html/studios.html
+++ b/src/html/studios.html
@@ -5,6 +5,7 @@
                 <h2 class="studio__title section-title">Наши студии</h2>
                 <span class="studios__text">Мы заботимся о комфорте наших моделей, именно поэтому все комнаты оборудованы идеальными рабочими местами, компьютерами последнего поколения, профессиональным освещением, LED подсветкой и камерами Brio</span>
             </div>
+            <div class="studios__lottie" id="swipe-lottie"></div>
             <a href="gallery-studios.html" class="studios__card studio-card" style="background-image: url('images/studio1.png');">
                 <h3 class="studio-card__title">1<span class="studio-card__dot dot">.</span> Москва</h3>
             </a>
