--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header__wrapper">
+    <div class="header__wrapper header__wrapper_scroll">
         <div class="header__container container">
             <a href="/" class="header__logo logo">
                 <img src="images/logo.png" alt="">
@@ -19,7 +19,6 @@
                 <span class="gradient-button__text">+7 (965) 829-76-13</span>
             </a>
             <button class="header__burger-button burger-button">
-                
                 <div class="burger-button__line"></div>
                 <div class="burger-button__line"></div>
                 <div class="burger-button__line"></div>
@@ -27,3 +26,31 @@
         </div>
     </div>
 </header>
+
+<div class="popup__overlay burger-popup__overlay" id="burger">
+    <div class="popup burger-popup">
+        <div class="popup__close"></div>
+        <div class="logo">
+            <img src="images/logo.png">
+        </div>
+        <nav class="menu burger-popup__menu">
+            <ul class="menu__list burger-popup__list">
+                <li class="menu__elem burger-popup__elem"><a href="about.html" class="menu__link">О студии</a></li>
+                <li class="menu__elem burger-popup__elem"><a href="job.html" class="menu__link">Вакансии</a></li>
+                <li class="menu__elem burger-popup__elem"><a href="gallery.html" class="menu__link">Галерея</a></li>
+                <li class="menu__elem burger-popup__elem"><a href="franchisees.html" class="menu__link">Для франчайзи</a></li>
+                <li class="menu__elem burger-popup__elem"><a href="blog.html" class="menu__link">Блог</a></li>
+                <li class="menu__elem burger-popup__elem"><a href="contacts.html" class="menu__link">Контакты</a></li>
+                <li class="menu__elem burger-popup__elem"><a href="faq.html" class="menu__link">FAQ</a></li>
+            </ul>
+        </nav>
+        <div class="social burger-popup__social">
+            <a href="https://wa.me/79139030572" class="social__elem burger-popup__social-elem">@@include('../images/vector/whatsapp.svg')</ф>
+            <!--<a href=""  class="social__elem">@@include('../images/vector/instagram.svg')</a>-->
+            <a href="https://t.me/exclusive_m0del"  class="social__elem burger-popup__social-elem">@@include('../images/vector/telegram.svg')</a>
+        </div>
+        <a href="tel:+79658297613" class="gradient-button gradient-button_active burger-popup__button">
+            <span class="gradient-button__text">+7 (965) 829-76-13</span>
+        </a>
+    </div>
+</div>
