--- a/src/article3.html
+++ b/src/article3.html
@@ -6,10 +6,7 @@
   <body>
     @@include('html/header.html', {})
     <main class="main">
-      <div class="privacy section-info container">
-        <h1 class="section-title">Политика конфиденциальности</h1>
-        <p class="section-text">Эта страница находится в разработке</p>
-      </div>
+        @@include('html/article3.html', {})
     </main>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
