--- a/src/html/about.html
+++ b/src/html/about.html
@@ -22,7 +22,7 @@
                 <span class="about-card__text">есть студии в 6 городах РФ</span>
             </div>
         </div>
-        <a href="#" class="gradient-button about__button">
+        <a href="#feedback" class="gradient-button about__button">
             <span class="gradient-button__text">Заполнить анкету</span>
         </a>
     </div>
