--- a/src/html/advantages.html
+++ b/src/html/advantages.html
@@ -5,28 +5,28 @@
                 <div class="advantage-card__content">
                     <div class="advantage-card__icon">@@include('../images/vector/advantage1.svg')</div>
                     <h2 class="advantage-card__title">Гарантии</h2>
-                    <span class="advantage-card__text">Гарантия ежедневных выплат заработанных денег</span>
+                    <span class="advantage-card__text">Гарантированные выплаты даже в такое время!</span>
                 </div>
             </div>
             <div class="advantages__card advantage-card">
                 <div class="advantage-card__content">
                     <div class="advantage-card__icon">@@include('../images/vector/advantage2.svg')</div>
-                    <h2 class="advantage-card__title">Карьерный рост</h2>
-                    <span class="advantage-card__text">Постоянная возможность зарабатывать больше</span>
+                    <h2 class="advantage-card__title">Надежная валюта</h2>
+                    <span class="advantage-card__text">Доход модели напрямую зависит от курса доллара, который стабильно растет!</span>
                 </div>
             </div>
             <div class="advantages__card advantage-card">
                 <div class="advantage-card__content">
                     <div class="advantage-card__icon">@@include('../images/vector/advantage3.svg')</div>
                     <h2 class="advantage-card__title">Обучение</h2>
-                    <span class="advantage-card__text">Постоянная возможность зарабатывать больше</span>
+                    <span class="advantage-card__text">Регулярные обучения профессии с первого дня работы!</span>
                 </div>
             </div>
             <div class="advantages__card advantage-card">
                 <div class="advantage-card__content">
                     <div class="advantage-card__icon">@@include('../images/vector/advantage4.svg')</div>
                     <h2 class="advantage-card__title">Работа в студии</h2>
-                    <span class="advantage-card__text">Отмеченной международными наградами Bucharest Summit, AWSummit</span>
+                    <span class="advantage-card__text">Студии со стильным ремонтом, всей необходимой техникой и бесплатными печеньками!</span>
                 </div>
             </div>
         </div>
