--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -4,7 +4,7 @@
             <h1 class="section-title">Контакты</h1>
             <p class="section-text">Связаться с нами очень просто!<br>Заполните форму обратной связи и наш менеджер свяжется с вами в кратчайшие сроки.</p>
         </div>
-        <div class="contacts__content">
+        <div class="contacts__content feedback__container">
             <div class="feedback__left">
                 <h3 class="feedback__title">Напишите нам в соц.сети или мессенджеры</h3>
                 <span class="feedback__text feedback__text_bold">Связаться с нами можно в:</span>
