--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -1,7 +1,7 @@
 <section class="faq">
     <div class="faq__container container">
         <div class="faq__info section__info">
-            <h1 class="section-title">Частов задаваемые вопросы</h1>
+            <h1 class="section-title">Часто задаваемые вопросы</h1>
             <p class="section-text">Мы подготовили ответы на самые часто задаваемые вопросы,<br>чтобы помочь вам получить нужную информацию быстро и без лишних усилий.</p>
         </div>
         <div class="faq__accordeon accordion">
