--- a/src/html/gallery-studios.html
+++ b/src/html/gallery-studios.html
@@ -4,6 +4,7 @@
             <h1 class="gallery-studios__title section-title">Наши студии</h1>
             <p class="section-text">На нашей странице галереи фотографий вы найдете все самое лучшее, что может предложить каждая из наших студий.</p>
         </div>
+        <div class="studios__lottie" id="swipe-lottie"></div>
         <div class="gallery-studios__grid studios__grid">
             <a href="images/studio1.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/studio1.png');">
                 <h3 class="studio-card__title">1<span class="studio-card__dot dot">.</span> Москва</h3>
