--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -2,8 +2,8 @@
     <div class="hero__container container">
         <div class="hero__wrapper">
             <span class="hero__subtitle">Exclusive model</span>
-            <span class="hero__title">Мечтаешь<br>о карьере модели?</span>
-            <span class="hero__text">Зарабатывай от 80 000 рублей,<br>благодаря своей внешности</span>
+            <span class="hero__title">Карьера модели<br>с заработком от<br>100000₽ в месяц!</span>
+            <span class="hero__text">Измени свою жизнь,<br>работая в самой крупной стрим-студии в России!</span>
             <a href="#feedback" class="gradient-button hero__button">
                 <span class="gradient-button__text">Заполнить анкету</span>
             </a>
