--- a/src/html/map.html
+++ b/src/html/map.html
@@ -7,5 +7,52 @@
         <div class="map__image-wrapper">
             @@include('../images/vector/map.svg')
         </div>
+        <div class="map__tips">
+            <div class="map-tip">
+                <span class="map-tip__title">Санкт-Петербург</span>
+                <div class="map-tip__content">
+                    <div class="map-tip__icon-wrapper">
+                        @@include('../images/vector/phone.svg')
+                    </div>
+                    <span class="map-tip__text">8 911 100 00 00</span>
+                </div>
+            </div>
+            <div class="map-tip">
+                <span class="map-tip__title">Санкт-Петербург</span>
+                <div class="map-tip__content">
+                    <div class="map-tip__icon-wrapper">
+                        @@include('../images/vector/phone.svg')
+                    </div>
+                    <span class="map-tip__text">8 911 100 00 00</span>
+                </div>
+            </div>
+            <div class="map-tip">
+                <span class="map-tip__title">Санкт-Петербург</span>
+                <div class="map-tip__content">
+                    <div class="map-tip__icon-wrapper">
+                        @@include('../images/vector/phone.svg')
+                    </div>
+                    <span class="map-tip__text">8 911 100 00 00</span>
+                </div>
+            </div>
+            <div class="map-tip">
+                <span class="map-tip__title">Санкт-Петербург</span>
+                <div class="map-tip__content">
+                    <div class="map-tip__icon-wrapper">
+                        @@include('../images/vector/phone.svg')
+                    </div>
+                    <span class="map-tip__text">8 911 100 00 00</span>
+                </div>
+            </div>
+            <div class="map-tip">
+                <span class="map-tip__title">Санкт-Петербург</span>
+                <div class="map-tip__content">
+                    <div class="map-tip__icon-wrapper">
+                        @@include('../images/vector/phone.svg')
+                    </div>
+                    <span class="map-tip__text">8 911 100 00 00</span>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
