--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -6,11 +6,12 @@
         <nav class="footer__menu menu">
             <ul class="menu__list">
                 <li class="menu__elem"><a href="about.html" class="menu__link">О студии</a></li>
-                <li class="menu__elem"><a href="faq.html" class="menu__link">FAQ</a></li>
                 <li class="menu__elem"><a href="job.html" class="menu__link">Вакансии</a></li>
                 <li class="menu__elem"><a href="gallery.html" class="menu__link">Галерея</a></li>
+                <li class="menu__elem"><a href="franchisees.html" class="menu__link">Для франчайзи</a></li>
                 <li class="menu__elem"><a href="blog.html" class="menu__link">Блог</a></li>
                 <li class="menu__elem"><a href="contacts.html" class="menu__link">Контакты</a></li>
+                <li class="menu__elem"><a href="faq.html" class="menu__link">FAQ</a></li>
             </ul>
         </nav>
         <p class="footer__text">Студия EXCLUSIVE MODEL не предоставляет и не является посредником в предоставлении услуг интимного характера. Все общение виртуально и несет исключительно развлекательный характер. Для лиц старше 18 лет.</p>
@@ -24,7 +25,7 @@
         <div class="feedback__slab-wrapper">
             <div class="feedback__slab">
                 <div class="feedback__circle"></div>
-                <div class="feedback__slab-text">Ответим в течение 7 минут</div>
+                <div class="feedback__slab-text">Оставьте свой контактный номер телефона,<br>и мы перезвоним вам!</div>
             </div>
         </div>
         <form class="feedback__form">
