--- a/src/html/about.html
+++ b/src/html/about.html
@@ -6,15 +6,15 @@
         </div>
         <div class="about__cards">
             <div class="about__card about-card about-card_with-image" style="background: url('images/about1.png');">
-                <h3 class="about-card__title">11 лет</h3>
+                <h3 class="about-card__title">3 года</h3>
                 <span class="about-card__text">практический опыт в вебкам индустрии</span>
             </div>
             <div class="about__card about-card about-card_purple">
                 <h3 class="about-card__title">ТОП студия</h3>
-                <span class="about-card__text">в 2018-2020 годах мы вошли в ТОП-5 студий России и Украины.</span>
+                <span class="about-card__text">в 2020-2023 годах мы вошли в ТОП-5 студий России.</span>
             </div>
             <div class="about__card about-card about-card_with-image" style="background: url('images/about2.png');">
-                <h3 class="about-card__title">более 200 моделей</h3>
+                <h3 class="about-card__title">более 300 моделей</h3>
                 <span class="about-card__text">доверяют нам</span>
             </div>
             <div class="about__card about-card">
