--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -41,31 +41,28 @@
                     <img src="images/calculator-bg.png" class="blog__image">
                     <span class="blog__date">16.04.2023</span>
                 </div>
-                <h2 class="blog__title">Как девушки становятся вебкам-моделями, и что для этого нужно?</h2>
+                <h2 class="blog__title">Как реагировать на общественное мнение, когда работаешь в вебкам-индустрии?</h2>
             </a>
             <a href="article6.html" class="blog__card">
                 <div class="blog__image-wrapper">
                     <img src="images/equipment2.png" class="blog__image">
                     <span class="blog__date">24.06.2023</span>
                 </div>
-                <h2 class="blog__title">Можно ли зарабатывать на вебкаме, пряча лицо</h2>
-                <p class="blog__text">Особенности и преимущества работы вебкам без лица. Что нужно знать о работе вебкам-моделью без лица? советы веб-моделей для новичков.</p>
+                <h2 class="blog__title">Как сохранить интерес мембера к общению</h2>
             </a>
             <a href="article7.html" class="blog__card">
                 <div class="blog__image-wrapper">
                     <img src="images/gallery2.png" class="blog__image">
                     <span class="blog__date">25.06.2023</span>
                 </div>
-                <h2 class="blog__title">Работа моделью: высокооплачиваемая профессия</h2>
-                <p class="blog__text">Как устроиться на работу моделью/вебкам-моделью? В чем заключается работа фотомоделью? Можно ли найти работу моделью без опыта? Ответы в этой статье.</p>
+                <h2 class="blog__title">Почему выбирают нас?</h2>
             </a>
             <a href="article8.html" class="blog__card">
                 <div class="blog__image-wrapper">
                     <img src="images/gallery4.png" class="blog__image">
                     <span class="blog__date">01.07.2023</span>
                 </div>
-                <h2 class="blog__title">Работа в видеочате: особенности, преимущества</h2>
-                <p class="blog__text">Особенности и преимущества работы вебкам без лица. Что нужно знать о работе вебкам-моделью без лица? советы веб-моделей для новичков.</p>
+                <h2 class="blog__title">Как правильно вести себя в приватном чате с мембером?</h2>
             </a>
         </div>
     </div>
