--- a/src/html/franchisees-advantages.html
+++ b/src/html/franchisees-advantages.html
@@ -10,19 +10,13 @@
             <div class="advantages__card advantage-card">
                 <div class="advantage-card__content">
                     <div class="advantage-card__icon">@@include('../images/vector/franchisees2.svg')</div>
-                    <h2 class="advantage-card__title">Более 2200 кв.м рабочего пространства</h2>
+                    <h2 class="advantage-card__title">Более 2200 м<sup>2</sup> рабочего пространства</h2>
                 </div>
             </div>
             <div class="advantages__card advantage-card">
                 <div class="advantage-card__content">
                     <div class="advantage-card__icon">@@include('../images/vector/franchisees3.svg')</div>
                     <h2 class="advantage-card__title">Более 300 сотрудников</h2>
-                </div>
-            </div>
-            <div class="advantages__card advantage-card">
-                <div class="advantage-card__content">
-                    <div class="advantage-card__icon">@@include('../images/vector/franchisees4.svg')</div>
-                    <h2 class="advantage-card__title">300 миллионов оборот студий в гол</h2>
                 </div>
             </div>
         </div>
