--- a/src/html/franchisees.html
+++ b/src/html/franchisees.html
@@ -1,32 +1,16 @@
-<div class="franchisees">
-    <div class="container">
-        <div class="franchisees__info section__info">
-            <h1 class="section-title">Для франчайзи</h1>
-        </div>
-        <div class="article__content franchisees__content">
-            <ol>
-                <li><p>Подключение к готовой системе привлечение моделей</p></li>
-                <li><p>Гарантия эксклюзивного права Франчайзи в зоне его ответственности по договору Франчайзинга</p></li>
-                <li>
-                    <p>Помощь в открытии и запуске студии:</p>
-                    <ul>
-                        <li><p>Помощь в выборе помещения</p></li>
-                        <li><p>Партнерские скидки на оборудование</p></li>
-                        <li><p>Настройка рабочих мест нашим системным администратором</p></li>
-                        <li><p>Советы по ремонту помещения, Партнерские скидки на мебель</p></li>
-                        <li><p>Стажировка сотрудников на нашей студии в реальных условиях</p></li>
-                        <li><p>Выезд руководителей, обучение вашего управляющего состава</p></li>
-                        <li><p>Регистрация студийных аккаунтов</p></li>
-                        <li><p>Обучение работе на вебкам платформах</p></li>
-                        <li><p>Анонимный вывод средств через Криптовалюты</p></li>
-                    </ul>
-                </li>
-                <li><p>Права на использование логотипа и фирменного стиля</p></li>
-                <li><p>Подключение к программным продуктам для управления бизнесом и консультации по их настройкам</p></li>
-                <li><p>Образцы документов, юридические аспекты бизнеса</p></li>
-                <li><p>Помощь франчайзи до запуска проекта. Сопровождения до первого рабочего дня.</p></li>
-                <li><p>Присоединенность к самой большой сети студий в РФ. 6 городов присутствия: Санкт-Петербург, Красноярск, Новосибирск, Томск, Тюмень, Екатеринбург</p></li>
-            </ol>
+<!--<div class="hero franchisees">
+    <div class="hero__container container">
+        <div class="hero__wrapper franchisees__hero">
+            <span class="hero__subtitle">Exclusive model</span>
+            <span class="hero__title"><b class="hero__title_pink">Франшиза</b><br>вебкам студий</span>
+            <span class="hero__text">Зарабатывайте от 350 000<br>до 850 000 рублей в месяц</span>
+            <a href="#feedback" class="gradient-button hero__button">
+                <span class="gradient-button__text">Заполнить анкету</span>
+            </a>
+            <div class="hero__social social">
+                <a href="https://wa.me/79139030572" class="social__elem">@@include('../images/vector/whatsapp.svg')</ф>
+                <a href="https://t.me/exclusive_m0del"  class="social__elem">@@include('../images/vector/telegram.svg')</a>
+            </div>
         </div>
     </div>
-</div>
+</div>-->
