--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -7,11 +7,10 @@
             <a href="#feedback" class="gradient-button hero__button">
                 <span class="gradient-button__text">Заполнить анкету</span>
             </a>
-            <div class="hero__social social">
+            <!--<div class="hero__social social">
                 <a href="https://wa.me/79139030572" class="social__elem">@@include('../images/vector/whatsapp.svg')</ф>
-                <!--<a href=""  class="social__elem">@@include('../images/vector/instagram.svg')</a>-->
                 <a href="https://t.me/exclusive_m0del"  class="social__elem">@@include('../images/vector/telegram.svg')</a>
-            </div>
+            </div>-->
         </div>
     </div>
 </section>
