--- a/src/html/job.html
+++ b/src/html/job.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="job-slide__column">
                             <span class="job-slide__column-title">Условия:</span>
-                            <p class="job-slide__text">Стабильные выплаты 2 раза в месяц. Заработок от 30 000 руб. в неделю, свободный график<br>+ пермии и бонусы</p>
+                            <p class="job-slide__text">Стабильные выплаты 2 раза в месяц. Заработок от 30 000 руб. в неделю, свободный график<br>+ премии и бонусы</p>
                         </div>
                         <div class="job-slide__column">
                             <span class="job-slide__column-title">Задачи:</span>
@@ -46,7 +46,7 @@
                         </div>
                         <div class="job-slide__column">
                             <span class="job-slide__column-title">Условия:</span>
-                            <p class="job-slide__text">Стабильные выплаты 2 раза в месяц. Заработок от 30 000 руб. в неделю, свободный график<br>+ пермии и бонусы</p>
+                            <p class="job-slide__text">Стабильные выплаты 2 раза в месяц. Заработок от 30 000 руб. в неделю, свободный график<br>+ премии и бонусы</p>
                         </div>
                         <div class="job-slide__column">
                             <span class="job-slide__column-title">Задачи:</span>
@@ -70,7 +70,7 @@
                         </div>
                         <div class="job-slide__column">
                             <span class="job-slide__column-title">Условия:</span>
-                            <p class="job-slide__text">Стабильные выплаты 2 раза в месяц. Заработок от 30 000 руб. в неделю, свободный график<br>+ пермии и бонусы</p>
+                            <p class="job-slide__text">Стабильные выплаты 2 раза в месяц. Заработок от 30 000 руб. в неделю, свободный график<br>+ премии и бонусы</p>
                         </div>
                         <div class="job-slide__column">
                             <span class="job-slide__column-title">Задачи:</span>
