--- a/src/html/video.html
+++ b/src/html/video.html
@@ -10,3 +10,12 @@
         </div>
     </div>
 </section>
+
+<div class="popup__overlay" id="video-popup">
+    <div class="popup feedback-popup">
+        <div class="popup__close"></div>
+        <div class="video-wrapper">
+            <video src="static/video.mp4" controls></video>
+        </div>
+    </div>
+</div>
