--- a/src/franchisees.html
+++ b/src/franchisees.html
@@ -7,8 +7,11 @@
     @@include('html/header.html', {})
     <main class="main">
         @@include('html/franchisees.html', {})
-        @@include('html/franchisees-advantages.html', {})
+        @@include('html/franchisees-swiper.html', {})
+        @@include('html/franchisees-benefits.html', {})
+        
         @@include('html/franchisees-cityes.html', {})
+        @@include('html/franchisees-advantages.html', {})
     </main>
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
