--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
     <div class="footer_container container">
-        <div class="footer__logo logo">
+        <a href="/" class="footer__logo logo">
             <img src="images/logo.png" alt="">
-        </div>
+        </a>
         <nav class="footer__menu menu">
             <ul class="menu__list">
                 <li class="menu__elem"><a href="about.html" class="menu__link">О студии</a></li>
@@ -43,4 +43,16 @@
             </p>
         </form>
     </div>
+</div>
+
+<div class="fixed-buttons">
+    <a href="https://wa.me/79139030572" class="fixed-buttons__elem">
+        @@include('../images/vector/whatsapp.svg')
+    </a>
+    <a href="https://t.me/exclusive_m0del"  class="fixed-buttons__elem">
+        @@include('../images/vector/telegram.svg')
+    </a>
+    <a href="#"  class="fixed-buttons__elem">
+        @@include('../images/vector/anchor.svg')
+    </a>
 </div>
