--- a/src/html/franchisees-cityes.html
+++ b/src/html/franchisees-cityes.html
@@ -3,21 +3,22 @@
         <div class="section-info">
             <h1 class="gallery-studios__title section-title">Наши франчайзи</h1>
         </div>
+        <div class="studios__lottie swipe-lottie"></div>
         <div class="gallery-studios__grid studios__grid">
-            <a href="#city" data-title="Красноярск" data-date="Дата открытия студии: 5.12.2022" data-room="10 комнат" data-img="images/city1.jpg" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/city1.jpg');">
+            <a href="#city" data-title="Красноярск" data-date="Дата открытия студии: 5.12.2022" data-room="10 комнат" data-img="images/city1.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/city1.png');">
                 <h3 class="studio-card__title">1<span class="studio-card__dot dot">.</span> Красноярск</h3>
             </a>
-            <a href="#city" data-title="Санкт-петербург" data-date="Дата открытия студии: 5.12.2022" data-room="10 комнат" data-img="images/city2.jpg" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/city2.jpg');">
+            <a href="#city" data-title="Санкт-петербург" data-date="Дата открытия студии: 5.12.2022" data-room="10 комнат" data-img="images/city2.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/city2.png');">
                 <h3 class="studio-card__title">2<span class="studio-card__dot dot">.</span> Санкт-петербург</h3>
             </a>
-            <a href="#city" data-title="Тюмень" data-date="Дата открытия студии: 5.12.2022" data-room="10 комнат" data-img="images/city3.jpg" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/city3.jpg');">
+            <a href="#city" data-title="Тюмень" data-date="Дата открытия студии: 5.12.2022" data-room="10 комнат" data-img="images/city3.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/city3.png');">
                 <h3 class="studio-card__title">3<span class="studio-card__dot dot">.</span> Тюмень</h3>
             </a>
-            <a href="#city" data-title="Екатеринбург" data-date="Дата открытия студии: 5.12.2022" data-room="10 комнат" data-img="images/city4.jpg" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/city4.jpg');">
+            <a href="#city" data-title="Екатеринбург" data-date="Дата открытия студии: 5.12.2022" data-room="10 комнат" data-img="images/city4.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/city4.png');">
                 <h3 class="studio-card__title">4<span class="studio-card__dot dot">.</span> Екатеринбург</h3>
             </a>
         </div>
-        <p class="franchisees-cityes__text">По вопросам приобретения франшизы в своем городе пишите ТГ: <a href="https://t.me/exclusive_m0del">@exclusive_m0del</a></p>
+        <p class="franchisees-cityes__text">По вопросам приобретения франшизы в своем городе пишите в наш Телеграм: <a href="https://t.me/exclusive_m0del">@exclusive_m0del</a></p>
     </div>
 </section>
 
