--- a/src/html/gallery-studios.html
+++ b/src/html/gallery-studios.html
@@ -4,22 +4,22 @@
             <h1 class="gallery-studios__title section-title">Наши студии</h1>
             <p class="section-text">На нашей странице галереи фотографий вы найдете все самое лучшее, что может предложить каждая из наших студий.</p>
         </div>
-        <div class="studios__lottie" id="swipe-lottie"></div>
+        <div class="studios__lottie swipe-lottie"></div>
         <div class="gallery-studios__grid studios__grid">
             <a href="images/studio1.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/studio1.png');">
-                <h3 class="studio-card__title">1<span class="studio-card__dot dot">.</span> Москва</h3>
+                <h3 class="studio-card__title">1<span class="studio-card__dot dot">.</span> Новосибирск</h3>
             </a>
             <a href="images/studio2.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/studio2.png');">
-                <h3 class="studio-card__title">2<span class="studio-card__dot dot">.</span> Новосибирск</h3>
+                <h3 class="studio-card__title">2<span class="studio-card__dot dot">.</span> Томск</h3>
             </a>
             <a href="images/studio3.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/studio3.png');">
-                <h3 class="studio-card__title">3<span class="studio-card__dot dot">.</span> Калининград</h3>
+                <h3 class="studio-card__title">3<span class="studio-card__dot dot">.</span> Красноярск</h3>
             </a>
             <a href="images/studio4.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/studio4.png');">
                 <h3 class="studio-card__title">4<span class="studio-card__dot dot">.</span> Санкт-петербург</h3>
             </a>
             <a href="images/studio5.png" class="gallery-studios__studio-card studios__card studio-card" style="background-image: url('images/studio5.png');">
-                <h3 class="studio-card__title">5<span class="studio-card__dot dot">.</span> Омск</h3>
+                <h3 class="studio-card__title">5<span class="studio-card__dot dot">.</span> Тюмень</h3>
             </a>
         </div>
     </div>
