--- a/src/html/studios.html
+++ b/src/html/studios.html
@@ -5,18 +5,18 @@
                 <h2 class="studio__title section-title">Наши студии</h2>
                 <span class="studios__text">Мы заботимся о комфорте наших моделей, именно поэтому все комнаты оборудованы идеальными рабочими местами, компьютерами последнего поколения, профессиональным освещением, LED подсветкой и камерами Logitech</span>
             </div>
-            <div class="studios__lottie" id="swipe-lottie"></div>
+            <div class="studios__lottie swipe-lottie"></div>
             <a href="gallery-studios.html" class="studios__card studio-card" style="background-image: url('images/studio1.png');">
-                <h3 class="studio-card__title">1<span class="studio-card__dot dot">.</span> Санкт-петербург</h3>
+                <h3 class="studio-card__title">1<span class="studio-card__dot dot">.</span> Новосибирск</h3>
             </a>
             <a href="gallery-studios.html" class="studios__card studio-card" style="background-image: url('images/studio2.png');">
-                <h3 class="studio-card__title">2<span class="studio-card__dot dot">.</span> Новосибирск</h3>
+                <h3 class="studio-card__title">2<span class="studio-card__dot dot">.</span> Томск</h3>
             </a>
             <a href="gallery-studios.html" class="studios__card studio-card" style="background-image: url('images/studio3.png');">
-                <h3 class="studio-card__title">3<span class="studio-card__dot dot">.</span> Томск</h3>
+                <h3 class="studio-card__title">3<span class="studio-card__dot dot">.</span> Красноярск</h3>
             </a>
             <a href="gallery-studios.html" class="studios__card studio-card" style="background-image: url('images/studio4.png');">
-                <h3 class="studio-card__title">4<span class="studio-card__dot dot">.</span> Красноярск</h3>
+                <h3 class="studio-card__title">4<span class="studio-card__dot dot">.</span> Санкт-петербург</h3>
             </a>
             <a href="gallery-studios.html" class="studios__card studio-card" style="background-image: url('images/studio5.png');">
                 <h3 class="studio-card__title">5<span class="studio-card__dot dot">.</span> Тюмень</h3>
