First part of works

--- a/src/html/benefits.html
+++ b/src/html/benefits.html
@@ -8,19 +8,19 @@
             </div>
             <div class="benefits__elem benefit">
                 <h3 class="benefit__title">2<span class="benefit__dot dot">.</span> Высокий доход</h3>
-                <p class="benefit__text">Постоянная возможность зарабатывать больше.</p>
+                <p class="benefit__text">Средний заработок в нашей студии 130 000 руб. в месяц!</p>
             </div>
             <div class="benefits__elem benefit">
                 <h3 class="benefit__title">3<span class="benefit__dot dot">.</span> Дизайнерские интерьеры</h3>
-                <p class="benefit__text">Стильные комнаты, в которых приятно работать.</p>
+                <p class="benefit__text">Стильные комнаты в которых, действительно, хочется работать!</p>
             </div>
             <div class="benefits__elem benefit">
-                <h3 class="benefit__title">4<span class="benefit__dot dot">.</span> Возможно совмещать с учёбой</h3>
-                <p class="benefit__text">Даём возможность начинать рабочий день в удобное для тебя время.</p>
+                <h3 class="benefit__title">4<span class="benefit__dot dot">.</span> Возможность совмещать с учёбой</h3>
+                <p class="benefit__text">Не надо бросать учёбу ради работы у нас. Можешь спокойно совмещать!</p>
             </div>
             <div class="benefits__elem benefit">
-                <h3 class="benefit__title">5<span class="benefit__dot dot">.</span> Обеды</h3>
-                <p class="benefit__text">У тебя всегда будет время на отдых, а о твоём питании позаботимся мы.</p>
+                <h3 class="benefit__title">5<span class="benefit__dot dot">.</span> Обучение</h3>
+                <p class="benefit__text">Обучаем всему с нуля, проводим различные тренинги, помогаем с познанием английского!</p>
             </div>
             <div class="benefits__elem benefit">
                 <h3 class="benefit__title">6<span class="benefit__dot dot">.</span> Отдельные комнаты</h3>
