--- a/src/html/feedback.html
+++ b/src/html/feedback.html
@@ -34,7 +34,7 @@
             <div class="feedback__slab-wrapper">
                 <div class="feedback__slab">
                     <div class="feedback__circle"></div>
-                    <div class="feedback__slab-text">Ответим в течение 7 минут</div>
+                    <div class="feedback__slab-text">Оставьте свой контактный номер телефона, и мы перезвоним вам!</div>
                 </div>
             </div>
             <form class="feedback__form">
