--- a/src/html/video.html
+++ b/src/html/video.html
@@ -1,10 +1,10 @@
 <section class="video">
     <div class="container">
         <div class="video__wrapper">
-            <h2 class="video__title">Распространённые вопросы<br>про вебкам-моделей</h2>
+            <h2 class="video__title">Самые распространённые вопросы про<br>вебкам-моделей</h2>
             <p class="video__paragraph">
-                <span class="video__text">Мы продолжаем отвечать на главные вопросы новичков в индустрии!</span>
-                <span class="video__text">Мы искренне рады публично разговаривать на эти темы!</span>
+                <span class="video__text">Мы продолжаем развеивать мифы о нашей индустрии и отвечать на главные вопросы и возражения!</span>
+                <span class="video__text">И мы искренне рады публично разговаривать на эти темы!</span>
             </p>
             <div class="video__button"></div>
         </div>
@@ -15,7 +15,7 @@
     <div class="popup feedback-popup">
         <div class="popup__close"></div>
         <div class="video-wrapper">
-            <video src="static/video.mp4" controls></video>
+            <video src="static/video.mp4" poster="images/video-preview.png" controls></video>
         </div>
     </div>
 </div>
